# ADK_DebateTeam

./: .gitignore  README.md  pyproject.toml  requirements.txt
debate_team/: __init__.py  agent.py
deployment/: deploy.py  test_deployment.py
